Mt05_Exemplo_Agenda/Agenda/src/docs/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.7.0_04\bin\javadoc.exe
-sourcepath
C:\Users\Giselle\workspace\Agenda
-source
1.7
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Users\Giselle\workspace\Agenda
-d
C:\Users\Giselle\workspace\Agenda\doc
-encoding
windows-1252
-charset
windows-1252
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
-doctitle
Agenda
-windowtitle
Agenda
-author
-version
-nodeprecated
-package
-link
http://download.oracle.com/javase/6/docs/api/
src.apresentacao
src.persistencia
src.modelo
<---- end of javadoc command ---->
Loading source files for package src.apresentacao...
Loading source files for package src.persistencia...
Loading source files for package src.modelo...
Constructing Javadoc information...
C:\Users\Giselle\workspace\Agenda\src\apresentacao\Agenda.java:4: error: package modelo does not exist
import modelo.*;
^
C:\Users\Giselle\workspace\Agenda\src\apresentacao\TelaPessoaFisica.java:3: error: package modelo does not exist
import modelo.*;
^
C:\Users\Giselle\workspace\Agenda\src\apresentacao\TelaPessoaFisica.java:22: error: cannot find symbol
	PessoaFisica pf;	
	^
  symbol:   class PessoaFisica
  location: class TelaPessoaFisica
C:\Users\Giselle\workspace\Agenda\src\apresentacao\TelaPessoaFisica.java:23: error: cannot find symbol
	Endereco end;
	^
  symbol:   class Endereco
  location: class TelaPessoaFisica
C:\Users\Giselle\workspace\Agenda\src\apresentacao\TelaPessoaFisica.java:24: error: cannot find symbol
	Telefone fone;
	^
  symbol:   class Telefone
  location: class TelaPessoaFisica
C:\Users\Giselle\workspace\Agenda\src\persistencia\DMPessoaFisica.java:3: error: package modelo does not exist
import modelo.*;
^
C:\Users\Giselle\workspace\Agenda\src\modelo\PessoaFisica.java:5: error: package persistencia does not exist
import persistencia.DMPessoaFisica;
                   ^
C:\Users\Giselle\workspace\Agenda\src\modelo\PessoaFisica.java:14: error: cannot find symbol
	private DMPessoaFisica dmPessoaFisica;
	        ^
  symbol:   class DMPessoaFisica
  location: class PessoaFisica
Standard Doclet version 1.7.0_04
Building tree for all the packages and classes...
Generating C:\Users\Giselle\workspace\Agenda\doc\src\apresentacao\Agenda.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\src\apresentacao\BarradeFerramenta.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\src\apresentacao\BarradeMenu.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\src\apresentacao\BarradeStatus.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\src\apresentacao\Clock.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\src\apresentacao\Data.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\src\apresentacao\JanelaPrincipal.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\src\apresentacao\TelaPessoaFisica.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\src\apresentacao\ToolButton.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\src\persistencia\DMGeral.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\src\persistencia\DMPessoaFisica.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\src\modelo\Endereco.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\src\modelo\Pessoa.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\src\modelo\PessoaFisica.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\src\modelo\PessoaJuridica.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\src\modelo\Telefone.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\overview-frame.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\src\apresentacao\package-frame.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\src\apresentacao\package-summary.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\src\apresentacao\package-tree.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\src\modelo\package-frame.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\src\modelo\package-summary.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\src\modelo\package-tree.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\src\persistencia\package-frame.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\src\persistencia\package-summary.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\src\persistencia\package-tree.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\constant-values.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\serialized-form.html...
Building index for all the packages and classes...
Generating C:\Users\Giselle\workspace\Agenda\doc\overview-tree.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\index-all.html...
Building index for all classes...
Generating C:\Users\Giselle\workspace\Agenda\doc\allclasses-frame.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\allclasses-noframe.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\index.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\overview-summary.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\help-doc.html...
Generating C:\Users\Giselle\workspace\Agenda\doc\stylesheet.css...
8 warnings
